--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,15 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3309/gif_db?allowPublicKeyRetrieval=true&useSSL=false
-    username: root
-    password: 12345
+    url: jdbc:mysql://${DB_URL}:${DB_PORT}/${DB_NAME}?allowPublicKeyRetrieval=true&useSSL=false
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
   h2:
     console:
       enabled: true
   jpa:
     hibernate:
-      ddl-auto:  create
+      ddl-auto:  update
     properties:
       hibernate:
         format_sql: true
