--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.4'
     id 'io.spring.dependency-management' version '1.1.6'
+    id 'com.google.protobuf' version '0.8.18'
+    id 'org.springframework.cloud.contract' version '3.1.0'
 }
 
 group = 'com.example'
@@ -15,6 +17,7 @@ java {
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
@@ -27,13 +30,19 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
-    runtimeOnly 'com.mysql:mysql-connector-j'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-    // web socket
+    runtimeOnly 'com.mysql:mysql-connector-j'
+
+    // AWS S3
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.550'
+    implementation 'software.amazon.awssdk:s3:2.17.0'
+
+    // WebSocket
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 }
+
