add : implements postgreSQL

--- a/build.gradle
+++ b/build.gradle
@@ -21,25 +21,51 @@ repositories {
 }
 
 dependencies {
+    // web-starter
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+//    // database
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//    runtimeOnly 'com.mysql:mysql-connector-j'
+    runtimeOnly 'org.postgresql:postgresql'
+
+    // lombok
     implementation 'org.projectlombok:lombok'
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test'
 
-    runtimeOnly 'com.mysql:mysql-connector-j'
+    // security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.security:spring-security-test'
+    implementation 'org.springframework.security:spring-security-crypto:5.7.1'
+
+    // validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     // AWS S3
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.550'
     implementation 'software.amazon.awssdk:s3:2.17.0'
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.563'
 
-    // WebSocket
+    // web socket
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
+    // devtools
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+    // redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.session:spring-session-data-redis'
+    implementation 'org.redisson:redisson-spring-boot-starter:3.17.7' // redis message broker(lock)
+
+    // Tomcat 의존성 추가
+    runtimeOnly 'org.springframework.boot:spring-boot-starter-tomcat'
+    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+
+    // kafka
+    implementation 'org.springframework.kafka:spring-kafka'
 }
 
 tasks.named('test') {
